[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsan"
version = "5.0.0"
requires-python = ">=3.14"
dependencies = [
    "typer",
    "rich",
    # Security floors (dream-2026-07-05.1): pyasn1>=0.6.3 fixes CVE-2026-23490
    # and CVE-2026-30922 (decoder DoS, reachable via untrusted cert parsing);
    # cryptography>=46.0.7 fixes CVE-2026-26007, PYSEC-2026-35, PYSEC-2026-36.
    # cryptography is capped <47 so the transitively-resolved pyOpenSSL stays
    # <26 and keeps the X509 extension API that extraction.py still relies on;
    # lifting this cap is the job of the cryptography.x509 migration, not this
    # patch PR. (GHSA-537c-gmf6-5ccf, needing cryptography>=48.0.1, is deferred
    # to that migration.)
    "pyasn1>=0.6.3",
    "cryptography>=46.0.7,<47",
    "pyOpenSSL",
]

[project.scripts]
gsan = "gsan.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
preview = true
select = [
  "E",    # pycodestyle — hard PEP 8 violations (indentation, spacing, etc.).
  "W",    # pycodestyle warnings — softer style nits you still want fixed.
  "F",    # pyflakes — real code errors: undefined names, unused vars & imports.
  "I",    # isort — keep your import blocks deterministically sorted/grouped.
  "B",    # bugbear — likely bugs and nasty edge-cases (mutable defaults, etc.).
  "C4",   # comprehensions — suggest faster/cleaner list- & dict-comps.
  "UP",   # pyupgrade — auto-rewrite code to the newest-supported Python syntax.
  "C901", # mccabe — flag functions whose cyclomatic complexity balloons.
  "SIM",  # simplify — call out over-engineered constructs; prefer the obvious one-liner.
  "N",    # pep8-naming — enforce PEP 8 names for classes, funcs, vars, etc.
  "RUF",  # Ruff-native extras — Ruff-only correctness/perf rules (a la "unicorn").
  "DOC",  # pydoclint — Google/Numpy docstring section order & completeness.
  "D",    # pydocstyle — PEP 257 docstring formatting conformance.
  "ARG",  # unused-arguments — catch never-used *args/**kwargs/params.
  "PERF", # perflint — flag obvious performance foot-guns (e.g., `list()` in loops).
]
ignore = ["D203", "D212", "D213"]

[tool.ruff.lint.mccabe]
# Maximum complexity allowed (default is 10)
max-complexity = 10

[tool.ruff.lint.pep8-naming]
# pyasn1 requires componentType (mixedCase) as part of its API
extend-ignore-names = ["componentType"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "pytest>=8",
]
