[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gsan"
version = "5.0.0"
requires-python = ">=3.14"
dependencies = [
    "typer",
    "rich",
    # SAN parsing now uses cryptography.x509 directly (dream-2026-07-05.1),
    # so pyOpenSSL and pyasn1 are no longer needed. The >=48.0.1 floor also
    # picks up GHSA-537c-gmf6-5ccf (vulnerable OpenSSL statically linked into
    # earlier cryptography wheels).
    "cryptography>=48.0.1",
]

[project.scripts]
gsan = "gsan.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
preview = true
select = [
  "E",    # pycodestyle — hard PEP 8 violations (indentation, spacing, etc.).
  "W",    # pycodestyle warnings — softer style nits you still want fixed.
  "F",    # pyflakes — real code errors: undefined names, unused vars & imports.
  "I",    # isort — keep your import blocks deterministically sorted/grouped.
  "B",    # bugbear — likely bugs and nasty edge-cases (mutable defaults, etc.).
  "C4",   # comprehensions — suggest faster/cleaner list- & dict-comps.
  "UP",   # pyupgrade — auto-rewrite code to the newest-supported Python syntax.
  "C901", # mccabe — flag functions whose cyclomatic complexity balloons.
  "SIM",  # simplify — call out over-engineered constructs; prefer the obvious one-liner.
  "N",    # pep8-naming — enforce PEP 8 names for classes, funcs, vars, etc.
  "RUF",  # Ruff-native extras — Ruff-only correctness/perf rules (a la "unicorn").
  "DOC",  # pydoclint — Google/Numpy docstring section order & completeness.
  "D",    # pydocstyle — PEP 257 docstring formatting conformance.
  "ARG",  # unused-arguments — catch never-used *args/**kwargs/params.
  "PERF", # perflint — flag obvious performance foot-guns (e.g., `list()` in loops).
]
ignore = ["D203", "D212", "D213"]

[tool.ruff.lint.mccabe]
# Maximum complexity allowed (default is 10)
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "pytest>=8",
]
